<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_log_in"
    tools:context=".login.LoginActivity"
    tools:ignore="MissingConstraints">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/dibble"
        android:text="@string/sign_in"
        android:textColor="@color/text"
        android:textSize="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/maianbo"
            android:text="@string/email_a"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_13"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/maianbo"
            android:text="@string/password_a"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_13"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/ic_btn_login"
            android:fontFamily="@font/maianbo"
            android:text="@string/sign_in"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/maianre"
            android:text="@string/create_account"
            android:textColor="@color/red"
            android:textSize="@dimen/_15sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginGG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/ic_box_search"
            android:fontFamily="@font/maianbo"
            android:text="Login with Google"
            android:textSize="@dimen/_14sdp"
            app:icon="@drawable/ic_icons8_google"
            app:iconSize="@dimen/_20sdp"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>